devops/k8s-do/02-phpmyadmin.yml
apiVersion: v1
kind: Service
metadata:
  name: service-phpmyadmin
  labels:
    app: service-phpmyadmin
    service: service-phpmyadmin
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-phpmyadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-phpmyadmin
  labels:
    app: service-phpmyadmin  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-phpmyadmin
  template:
    metadata:
      labels:
        app: service-phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
