devops/k8s-do/00-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: do-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: service-api-products
      port:
        number: 8090
  rules:
  - http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: service-api-products
            port:
              number: 8090
